# dteassistant

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ValidationError.h  articulator.cpp  articulator.h  articulator.ui  autotab.h  configmanager.cpp  configmanager.h  diplomadates.cpp  diplomadates.h  diplomadates.ui  documentationhelper.cpp  documentationhelper.h  enterkeyhandler.h  excelmanager.cpp  excelmanager.h  keyboardautomation.cpp  keyboardautomation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  programchanger.cpp  programchanger.h  programchanger.ui  spreadsheetview.cpp  spreadsheetview.h  statusbarmanager.cpp  statusbarmanager.h  termbuilder.cpp  termbuilder.h  termbuilder.ui  transcriptreviewer.cpp  transcriptreviewer.h  transcriptreviewer.ui  transcriptreviewvalidator.cpp  transcriptreviewvalidator.h  windowmanager.cpp  (+1 more)
